--- a/landingPage.html
+++ b/landingPage.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
         <div class="logo">
-            <img src="images/Logoooo.png" alt="Furfect-Care-Logo">
+            <img src="Logoooo.png" alt="Furfect-Care-Logo">
         </div>
         <div class="auth-buttons">
             <a href="Login.html" target="_top"><button class="sign"><span class="btn-txt">SIGN IN</span></button></a>
