--- a/landingPage.html
+++ b/landingPage.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
         <div class="logo">
-            <img src="images/Logoooo.png" alt="Furfect-Care-Logo">
+            <img src="Logoooo.png" alt="Furfect-Care-Logo">
         </div>
         <div class="auth-buttons">
             <a href="Login.html" target="_top"><button class="sign"><span class="btn-txt">SIGN IN</span></button></a>
@@ -102,10 +102,10 @@
 
         <div class="social-media">
             <h3>Connect with Us</h3>
-            <a href="https://facebook.com/yourprofile" target="_blank"><img src="images/fb.png" alt="Facebook"></a>
-            <a href="https://twitter.com/yourprofile" target="_blank"><img src="images/twitter.png" alt="Twitter"></a>
-            <a href="https://tiktok.com/yourprofile" target="_blank"><img src="images/tiktok.png" alt="TikTok"></a>
-            <a href="https://instagram.com/yourprofile" target="_blank"><img src="images/ig.png" alt="Instagram"></a>
+            <a href="https://facebook.com/yourprofile" target="_blank"><img src="fb.png" alt="Facebook"></a>
+            <a href="https://twitter.com/yourprofile" target="_blank"><img src="twitter.png" alt="Twitter"></a>
+            <a href="https://tiktok.com/yourprofile" target="_blank"><img src="tiktok.png" alt="TikTok"></a>
+            <a href="https://instagram.com/yourprofile" target="_blank"><img src="ig.png" alt="Instagram"></a>
         </div>
 
         <div class="map-container">
